# Software-Design-Patterns-The-Adapter-Pattern

./: CMakeLists.txt  README.md
include/: QueueInterface.h  csc232.h  expanded_templates.h
test/: google_test_runner.cpp
